--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,8 @@
         <derby.version>10.14.2.0</derby.version>
         <testcontainers.version>1.19.0</testcontainers.version>
         <chatgpt-java.version>1.1.3</chatgpt-java.version>
+        <flink.ui/>
+        <spark.ui/>
 
         <!--Vulnerability version fixes-->
         <velocity.version>1.7</velocity.version>
@@ -460,6 +462,18 @@
             </activation>
             <properties>
                 <assembly.skip>false</assembly.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>spark</id>
+            <properties>
+                <spark.ui>spark</spark.ui>
+            </properties>
+        </profile>
+        <profile>
+            <id>flink</id>
+            <properties>
+                <flink.ui>flink</flink.ui>
             </properties>
         </profile>
     </profiles>
