--- a/task-ui/package.json
+++ b/task-ui/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "packageManager": "pnpm@7.8.0",
   "scripts": {
-    "build": "vite build",
+    "build": "vite build -- --ui",
     "dev": "vite --port 3333 --open",
     "lint": "eslint .",
     "preview": "vite preview",
