update: fix docker compose and doc

--- a/docker/playground/compose.yml
+++ b/docker/playground/compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: compass
     container_name: postgres
     hostname: postgres
     ports:
