--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector.version}</version>
-                <!--                <scope>test</scope>-->
+                <scope>test</scope>
             </dependency>
 
             <dependency>
