--- a/docker/playground/conf/spark/spark-defaults.conf
+++ b/docker/playground/conf/spark/spark-defaults.conf
@@ -18,9 +18,7 @@
 # Default system properties included when running spark-submit.
 # This is useful for setting default environmental settings.
 
-spark.driver.host=0.0.0.0
-spark.ui.port=4040
-spark.sql.shuffle.partitions=16
-spark.sql.warehouse.dir=s3a://spark-bucket/warehouse
-spark.hadoop.fs.s3a.bucket.spark-bucket.committer.magic.enabled=true
-spark.hadoop.fs.s3a.bucket.iceberg-bucket.committer.magic.enabled=true
+spark.eventLog.dir=hdfs://hadoop:8020/spark/logs
+spark.eventLog.enabled=true
+spark.history.ui.port=18018
+spark.yarn.historyServer.address=hadoop:18018
