--- a/docker/playground/conf/spark/spark-defaults.conf
+++ b/docker/playground/conf/spark/spark-defaults.conf
@@ -18,7 +18,8 @@
 # Default system properties included when running spark-submit.
 # This is useful for setting default environmental settings.
 
-spark.eventLog.dir=hdfs://hadoop:8020/spark/logs
+spark.eventLog.dir=hdfs://hadoop:8020/tmp/spark-events
+spark.history.fs.logDirectory=hdfs://hadoop:8020/tmp/spark-events
 spark.eventLog.enabled=true
 spark.history.ui.port=18018
 spark.yarn.historyServer.address=hadoop:18018
