fix: support spark compressed event log file

--- a/task-detect/src/main/resources/application.yml
+++ b/task-detect/src/main/resources/application.yml
@@ -72,3 +72,6 @@ custom:
     durationWarning: 2
     # Configuration for long-term failure, in days.
     alwaysFailedWarning: 10
+
+  spark:
+    compressionCodec: "zstd"
